@@ -1,3 +1,8 @@
+2001-10-31  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* sample.tmdarc: Change Postfix references to non-qmail since they
+	are the same for Exim.
+
 2001-10-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* sample.tmdarc: Add MESSAGE_FROM_STYLE and KEYWORD_FILE.
